fix grid overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@ html {
 body, html {
     margin:0;
     padding:0;
-    height:100%;
     color: #faf7f8;
     font-family: 'Montserrat', sans-serif;
 }
@@ -24,9 +23,8 @@ body, html {
 body {
     display:flex;
     flex-direction: column;
-    justify-content: space-between;
     background-color: #4577bb;
-    height:100%;
+    justify-content: space-between;
 }
 
 h1 {
@@ -80,16 +78,11 @@ h1 {
     max-height:40px;
 }
 
-button {
-    font-family: "Montserrat", sans-serif;
-}
-
 .tabs {
     display:flex;
     flex-wrap:wrap;
     max-width:100%;
     gap:0px;
-    height:100%;
 }
 
 .tabs input[type="radio"] {
@@ -114,7 +107,6 @@ button {
     margin:0px;
     padding:20px;
     display:none;
-    height:calc(100% - 100px);
     width:100%;
 }
 
@@ -131,6 +123,7 @@ button {
     margin-top:auto;
     margin-bottom:auto;
     margin-right: 10px;
+    font-family: "Montserrat", sans-serif;
 }
 
 main {
@@ -142,10 +135,10 @@ main {
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-template-rows:repeat(auto-fill, minmax(10rem, 1fr));
     grid-auto-rows:auto;
-    grid-gap:1rem;
+    grid-gap:2rem;
     background-color: #c3c3c3;
     height:100%;
-    padding:1rem;
+    padding:2rem;
     border-radius:20px;
     box-shadow: 5px 5px 15px -2px rgba(0,0,0,0.57);
 }
